# automation-templates

./: .gitattributes  .gitguardian.yaml  .gitignore  .releaserc.cjs  CHANGELOG.MD  CHANGELOG.md  CHANGELOG_TEMP.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  ENHANCED-RELEASE-SUMMARY.md  LICENSE  README-TEST.md  README.MD  SECURITY.MD  WORKFLOWS.md  cleanup-releases.ps1  commitlint.config.js  patch-test.md  release-please-config.json  release.config.cjs  validation-test.md
.claude/: CLAUDE.md  settings.md
.claude/commands/: triage.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: CONFIG.YML  DOCUMENTATION.MD  FEATURE_REQUEST.MD1  SECURITY_VULNERABILITY.MD  WORKFLOW_SUPPORT.MD  bug_report.md  feature_request.md
.github/actions/: README.md
.github/actions/action-resolver/: README.md  action.yml
.github/actions/artifact-generator/: action.yml
.github/actions/auto-merge/: action.yml
.github/actions/claude-code/: action.yml
.github/actions/containerized-embedded-build/: README.md  action.yml
.github/actions/docker-build/: action.yml
.github/actions/dotnet-nuget/: README.md  action.yml
.github/actions/esp32-build/: README.md  action.yml
.github/actions/generate-changelog/: action.yml
.github/actions/gitguardian-scan/: action.yml
.github/actions/gitleaks-scan/: action.yml
.github/actions/labeler-triage/: action.yml
.github/actions/license-compliance/: action.yml
.github/actions/makefile-build/: README.MD  action.yml
.github/actions/mkdocs-apply-brand/: README.md  action.yml
.github/actions/platformio-build/: README.md  action.yml
.github/actions/python-package/: action.yml
.github/actions/python-quality/: action.yml
.github/actions/python-setup/: action.yml
.github/actions/python-test/: action.yml
.github/actions/readme-generate/: action.yml
.github/actions/release-please/: action.yml
.github/actions/repository-cleanup/: README.md  action.yml
.github/actions/sbom-attest/: action.yml
.github/actions/security-generate/: README.MD  action.yml
.github/config/: .releaserc.json  README.md  commitlint.config.js  enhanced-release-please-config.json  pr-labeler-paths.yml  release-please-config.json
.github/modules/: README.MD  artifact-generation.yml
.github/release/: release.config.cjs
.github/workflows/: MODULES-README.MD  README.MD  README.md  ai-issue-summary.yml  automatic-release.yml  ci-cd.yml  claude-code.yml  containerized-embedded-build.yml  coolify-deploy.yml  docker-build.yml  docker-maintenance-dependabot.yml  docker-maintenance-renovate.yml  docs-autogen.yml  documentation.yml  dotnet-build.yml  dotnet-desktop-build.yml  dotnet-publish-binaries.yml  dotnet-publish-library.yml  enhanced-release.yml  esp32-build.yml  issue-automation.yml  makefile-build.yml  manual-release.yml  meta-repository-sync.yml  mkdocs-deploy-pages.yml  modules-ai-issue-summary.yml  modules-artifact-generation.yml  modules-auto-maintenance.yml  modules-code-quality.yml  modules-docker-base-image-monitor.yml  modules-issue-automation.yml  modules-license-compliance.yml  modules-pr-labeler.yml  modules-pr-validation.yml  modules-release-management.yml  modules-repository-cleanup.yml  modules-security-scan.yml  modules-semantic-release.yml  modules-validate-compose.yml  modules-validate-dockerfile.yml  (+20 more)
docs/: ENHANCED-RELEASE-FIXES.md  ENHANCED-RELEASE-UPDATE.md  ESP32-BUILD-DEPLOYMENT-CONCEPT.md  MANUAL-RELEASE.MD  README.MD  README.template.MD  SECURITY.template.MD  UNIVERSAL-RELEASE.MD  secrets-reference.md  self-hosted-runners.md  workflow-icon-conventions.md
docs/guides/: sonarqube-integration.md
docs/workflows/: claude-code.md  coolify-deploy.md  docker-build.md  docker-maintenance.md  dotnet-build.md  dotnet-desktop-build.md  dotnet-publish-binaries.md  dotnet-publish-library.md  esp32-build.md  makefile-build.md  meta-repository-sync.md  modules-auto-maintenance.md  modules-code-quality.md  modules-validate-compose.md  modules-validate-dockerfile.md  modules-validate-shellscript.md  nodejs-build.md  php-build.md  platformio-build.md  python-build.md  python-semantic-release.md  sbom-attest.md  shopware5-build.md  stm32-build.md  teams-notifications.md  vex-generate.md  zephyr-build.md
examples/: pyproject.toml  python-semantic-release-example.yml
examples/dotnet-build/: blazor-wasm-deploy.yml  matrix-cross-platform.yml  microservice-k8s.yml  nuget-package-publish.yml  simple-library.yml  web-api-docker.yml
examples/dotnet-desktop-build/: advanced-signed-build.yml  basic-wpf-build.yml  matrix-build-test.yml  msix-package-build.yml  multi-project-build.yml
examples/nodejs-build/: matrix-multi-version.yml  monorepo-turborepo.yml  nextjs-docker-deploy.yml  npm-publish-release.yml  react-app-deploy.yml  simple-npm-package.yml
github/branch-protect/: README.MD  protect-main.sh  protect_main.py  run_protection.sh  test_build_payload.py
github/claude-code/: README.md
github/cleanup/: EXAMPLES.md  OAUTH_GUIDE.md  OVERVIEW.md  README.md  README_NEW.md  cleanup.bat  cleanup.ps1  cleanup.sh  cleanup_oauth.ps1  config.example.py  github-cleanup.bat  github-cleanup.ps1  github-cleanup.sh  github_auth.py  github_cleanup.py  quick_cleanup.ps1  requirements.txt  test_device_auth.py  test_oauth.py
github/runner/: .env.example  README.md  docker-compose.yml
github/workflows/: GITHUB-WORKFLOW-LOCAL-TESTING.md  README-CONFIGURATION.md  README.md  SECRETS-NAMING-CONVENTION.MD  build.yml  deploy.yml  readme.yml  release-please.yml  release.yml  security-scan.yml
license-reports/: compliance-summary.md  findings.md  sbom-cyclonedx.json  sbom-spdx.json  sbom-summary.txt
scripts/: README.MD  generate_docs.py  generate_readme.py  manual-release.ps1  manual-release.sh  universal-release.ps1  universal-release.sh  validate-workflows.ps1
security-reports/: dual-security-summary.md
security-reports/gitguardian/: gitguardian-report.json  scan-output.json  security-summary.md
tools/: README.md  deploy-automations.ps1  deploy-automations.sh  deploy-config.yml  deploy_automations.py  requirements.txt
(+293 files in other folders)
